<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActCadEndereco"
    tools:showIn="@layout/activity_act_cad_endereco">

    <TextView
        android:id="@+id/CEP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_CEP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCEP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/CEP"
        app:layout_constraintStart_toStartOf="@+id/CEP"
        app:layout_constraintTop_toBottomOf="@+id/CEP" />

    <TextView
        android:id="@+id/txtLogradouro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_Logradouro"
        app:layout_constraintEnd_toEndOf="@+id/edtEstado"
        app:layout_constraintStart_toStartOf="@+id/edtEstado"
        app:layout_constraintTop_toBottomOf="@+id/edtEstado" />

    <EditText
        android:id="@+id/edtLogradouro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtLogradouro"
        app:layout_constraintStart_toStartOf="@+id/txtLogradouro"
        app:layout_constraintTop_toBottomOf="@+id/txtLogradouro" />

    <TextView
        android:id="@+id/txtCidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblCidade"
        app:layout_constraintEnd_toEndOf="@+id/edtCEP"
        app:layout_constraintStart_toStartOf="@+id/edtCEP"
        app:layout_constraintTop_toBottomOf="@+id/edtCEP" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtCidade"
        app:layout_constraintStart_toStartOf="@+id/txtCidade"
        app:layout_constraintTop_toBottomOf="@+id/txtCidade" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblEstado"
        app:layout_constraintEnd_toEndOf="@+id/edtCidade"
        app:layout_constraintStart_toStartOf="@+id/edtCidade"
        app:layout_constraintTop_toBottomOf="@+id/edtCidade" />

    <EditText
        android:id="@+id/edtEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtEstado"
        app:layout_constraintStart_toStartOf="@+id/txtEstado"
        app:layout_constraintTop_toBottomOf="@+id/txtEstado" />
</android.support.constraint.ConstraintLayout>